# craftlings

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  pages.yml
book/: book.toml
book/src/: introduction.md
crates/core/: Cargo.toml
crates/core/src/: constants.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
game/: Cargo.toml
game/src/: main.rs
