[workspace]
members = ["crates/*", "game"]
resolver = "2"

[workspace.package]
authors = ["Miche <michewl@pm.me>"]
edition = "2024"
license = "AGPL-3.0"
publish = false
rust-version = "1.85"
version = "0.0.1"

[workspace.dependencies]
craftlings-core = { path = "crates/core", version = "0.0.1" }
craftlings-diagnostics = { path = "crates/diagnostics", version = "0.0.1" }

bevy = "0.15"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
